Added sys settings for logging level. TODO, AP wifi conf & certs to spiffs

--- a/main/spiffs/default_page.html
+++ b/main/spiffs/default_page.html
@@ -10,7 +10,8 @@
 <div class='nav'>
     <a href='/wifi' class="" id="WiFi">Wi-Fi</a>
     <a href='/ota' class="" id="OTA">OTA</a>
-    <a href='/usercfg' class="" id="UserCfg">User</a>
+    <a href='/system' class="" id="System">SYS</a>
+    <a href='/usercfg' class="" id="UserCfg">USR</a>
 </div>
 <div class='container'  id="content">
 
